Fixing overflows and in turn stickies

--- a/src-docs/src/views/guidelines/colors/_color_section.scss
+++ b/src-docs/src/views/guidelines/colors/_color_section.scss
@@ -2,7 +2,7 @@
   .guideColorsPage__stickySlider {
     position: sticky;
     top: $euiHeaderHeightCompensation;
-    z-index: $euiZLevel1;
+    z-index: $euiZLevel1 - 1; // Below header
   }
 }
 
